--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -51,7 +51,16 @@
         </dependency>
 
 <!--        aquí agregaremos más dependencias para : base de datos, seguridad, bootstrap etc...-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
