--- a/spring-mvc/src/main/resources/application.properties
+++ b/spring-mvc/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=spring-mvc
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 #server.port=8081
